Fixed the header padding when it shifts to small screens

--- a/css/less/mediaQueries.less
+++ b/css/less/mediaQueries.less
@@ -60,7 +60,7 @@
   }
   .topHeader{height:50px;}
   .mainArea{
-    padding-top:65px;
+    padding-top:80px;
   }  
   .siteMap{
     width:80%;
